--- a/style.css
+++ b/style.css
@@ -1,20 +1,34 @@
 
+body {
+    max-width: 1280px;
+    margin: 0 auto;
+}
+.header {
+    margin-bottom: 50px;
+}   
+.navbar>.container, .navbar>.container-fluid, .navbar>.container-lg, .navbar>.container-md, .navbar>.container-sm, .navbar>.container-xl, .navbar>.container-xxl {
+    display: flex;
+    flex-wrap: inherit;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 1100px;
+    margin: 0 auto;
+}
 .navbar-brand{
     font-size: 16px;
     font-weight: 800;
     font-family: Arial, Helvetica, sans-serif;
-    margin-left: 100px;
+    
 }
 nav.navbar.navbar-expand-lg {
     margin-top: 15px;
 }
-
-#navbarNavDropdown {
-    margin-left: 300px;
-}
-
+.header div#navbarNavDropdown {
+    flex-basis: auto; 
+    justify-content: end;
+} 
 .navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
-    color: rgb(11, 91, 184);
+    color: rgb(60, 38, 196);
 }
 
 
@@ -29,7 +43,7 @@ nav.navbar.navbar-expand-lg {
     font-size: 11px;
     font-weight: 800;
     font-family: system-ui;
-    background-color: rgb(11, 91, 184);
+    background-color: rgb(60, 38, 196);
     border-radius: 6px;
     border: none;
     padding: 10px 14px;
@@ -38,47 +52,59 @@ nav.navbar.navbar-expand-lg {
 .nav-link1{
     color: bisque;
     text-decoration: none;
+    font-weight: 500;
+    font-size: 13px !important;
 }
 
 .nav-item :hover{
-    color: rgb(11, 91, 184);
+    color: rgb(60, 38, 196);
 }
 .col-md-6.cls2 img {
     width: 100% !important;
 }
+.row {
+    width: 1140px;
+    margin: 0 auto;
+}
+ .container-fluid {
+     
+    margin-bottom: 50px;
+}
 .GIT{
     font-size: 13px;
-    font-weight: 800;
+    font-weight: 500;
     font-family: system-ui;
-    background-color: rgb(11, 91, 184);
+    background-color: rgb(60, 38, 196);
     border-radius: 30px;
     border: none;
     padding: 12px 25px;
-    margin-left: 30px;
-}
-.col-md-6.cls2 {
-    margin-top: 80px;
-}
-.col-md-6.cls1 {
-    margin-top: 130px;
 }
 p.IH {
     letter-spacing: 5px;
     font-family: monospace;
     font-size: 15px;
-    color: rgb(11, 91, 184);
+    color: rgb(60, 38, 196);
     font-weight: 900;
-    margin-left: 30px;
+    margin-top: 50px;
+}
+.col-md-6 {
+    flex: 0 0 auto;
+    width: 50%;
+    margin: 0 auto;
+    margin-top: 40px;
+}
+h2 {
+    font-size: 22px;
+    font-family: ui-monospace;
+    font-weight: 600;
+    margin-top: 50px;
 }
 p.FFA {
     color: darkgrey;
     font-family: system-ui;
     font-size: 14px;
-    margin-right: 270px;
-    margin-left: 30px;
 }
 h1{
-margin-left: 30px;
 font-family: ui-monospace;
 font-weight: 900;
 line-height: 70px;
@@ -89,14 +115,11 @@ a {
     color: bisque;
 }
 h2 {
-    margin-left: 100px;
     font-size: 22px;
     font-family: ui-monospace;
     font-weight: 600;
-    margin-top: 150px;
 }
 p {
-    margin-left: 100px;
     font-family: ui-monospace;
     color: darkgrey;
     font-size: 14px;
@@ -105,8 +128,8 @@ p {
 form.search-bar {
     width: 100%;
     max-width: 580px;
-    background-color: rgb(11, 91, 184);
-    padding: 41px 54px 95px 38px;
+    background-color: rgb(60, 38, 196);
+    padding: 35px 54px 70px 38px;
     border-radius: 45px 1px;
     align-items: center;
     display: flex;
@@ -121,6 +144,7 @@ button.submit {
     font-family: sans-serif;
     font-weight: 700;
     outline: none;
+    border-radius: 2px;
 }
 input[type="text"] {
     padding: 13px 140px 10px 30px;
@@ -128,32 +152,35 @@ input[type="text"] {
     outline: none;
     border: unset;
 }
-.col-md-6.cls4 {
-    margin-top: 60px;
-    margin-bottom: 70px;
+select#exampleFormControlSelect1 {
+    border-left: 1px solid;
+    border-radius: 2px;
 }
+
 .form-control {
+    width: 50px;
+    border-radius: 2px;
     display: block;
-    padding: 13px;
+    padding: 12.5px;
     font-size: 10px;
     font-weight: 400;
-    color: rgb(11, 91, 184);
+    color: rgb(60, 38, 196);
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
     background-color: var(--bs-body-bg);
     background-clip: padding-box;
-    border: none;
+    
     font-family:ui-monospace;
     border-radius: 0px;
     font-weight: 800;
-    border: unset;
+    
 
 }
 .form-control:focus {
-    color: rgb(11, 91, 184);
+    color: rgb(60, 38, 196);
     
-    border-color: rgb(11, 91, 184);
+    border-color: rgb(60, 38, 196);
     outline: 0px;
     box-shadow: unset;
 
@@ -161,51 +188,94 @@ input[type="text"] {
 input[type="text"] {
     width: 502px;
     padding: 11.5px 120px 11.5px 10px !important;
+    border-radius: 2px;
 }
 select#exampleFormControlSelect1 {
     border-left: 1px solid;
 }
 i.fa-solid.fa-caret-down {
-    position: absolute;
-    right: 256px;
-    font-size: 11px;
+    position: relative;
+    bottom: 3.5px;
+    right: 133px;
+    font-size: 8px;
+}
+.rates {
+    display: flex;
+    position: relative;
+    bottom: 70px;
+    left: 45px;
+}
+.rates p {
+    font-size: 10px;
+    color: bisque;
+    margin-right: 20px;
+    font-weight: 800;
+}
+span {
+    color: greenyellow;
+    font-weight: 800;
 }
 @media only screen and (max-width: 600px) and (min-width: 320px)  {
+   .body{
+    max-width: 600px;
+    margin: 0 auto;
+   } 
+   .header {
+    margin-bottom: 50px;
+    width: 600px;
+   }
+   .col-md-6.cls1 {
+    margin: unset;
+}
+   p.IH {
+    font-size: 12px;
+   }
+   .row {
+    max-width: 600px;
+    margin: 0 auto;
+    display: block;
+}
+   
     p.FFA {
         margin: unset;
     }
-    button.navbar-toggler {
-        margin-right: -140px;
-    }
-    a.navbar-brand {
-        margin-left: 35px;
-        font-size: 20px;
-        margin-top: 8px;
-    }
-    p.FFA {
-        margin-left: 37px;
-        margin-top: 25px;
-        font-size: 18px;
-    }   
-    button.GIT {
+    
+   .GIT {
         margin-top: 35px;
         font-size: 17px;
         padding: 15px 35px 15px 35px;
     }
-    img {
-        width: 443px !important;
+    .col-md-6.cls2 img {
+        width: 98% !important;
+        margin: 0 auto !important;
     }
-    h2 {
-        margin-left: 20px;
+    h1{
+        width: 30%;
     }
+    .col-md-6 {
+        flex: 0 0 auto;
+        width: unset;
+        margin: 0 auto;
+        margin-top: 40px;
+        text-align: start;
+    }
+    .col-md-6.cls4 {
+        width: 60%;
+    }
+    
+    .row>* {
+        flex-shrink: 0;
+        width: 100%;
+    }
+    
     p {
-        margin-left: 20px;
+        
         font-size: 20px;
     }
     h2 {
-        margin-left: 20px;
+        
         font-size: 28px;
-        margin-right: -63px;
+        
     }
     form.search-bar {
         display: block
@@ -229,12 +299,15 @@ i.fa-solid.fa-caret-down {
         position: absolute;
         right: 30px;
     }
-    img {
-        margin-left: 68px;
-    }
+     
     ::before {
         position: absolute;
         top: 323px;
     }
-        
+    .rates {
+        display: flex;
+        position: relative;
+        bottom: 65px;
+        left: 45px;
+    }
 }
